# SeaBattle

./: CMakeLists.txt  InitCLose.cpp  InitClose.h  Interface.h  IsoEngine.cpp  IsoEngine.h  Map.cpp  Map.h  README.md  Renderer.cpp  Texture.cpp  World.cpp  World.h  ai.h  artifical_inteligence.cpp  cursor.cpp  cursor.h  draw.cpp  draw.h  game.cpp  game.h  main.cpp  player.cpp  player.h  script 101 .lua  script.lua  ship.cpp  ship.h
Headers/: CAnimation.h  CCursor.h  CEffect.h  CMap.h  CPlayer.h  CShip.h  CWorld.h  IInterface.h  Interface.h  IsoEngine.h  Map.h  Renderer.h  Texture.h  World.h  ai.h  cursor.h  player.h  ship.h
Lua Scripts/: script 101 .lua
SDL_CMake/: FindSDL2.cmake  FindSDL2_image.cmake
Sources/: CAnimation.cpp  CCursor.cpp  CEffect.cpp  CMap.cpp  CPlayer.cpp  CShip.cpp  CWorld.cpp  InitCLose.cpp  IsoEngine.cpp  Map.cpp  Renderer.cpp  Texture.cpp  World.cpp  artificial_intelligence.cpp  cursor.cpp  main.cpp  player.cpp  ship.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
sdl/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
sdl/Lesson0/: CMakeLists.txt  Lesson0  Makefile  cmake_install.cmake  main.cpp
